Modificación de nombre del curso

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div id="linea-ts"></div>
     <h1 id="talento-sistemas">Talento <br> Sistemas</h1>
-    <h2 id="bootcamp-TS">Bootcamp TS</h2>
+    <h2 id="codecamping-TS">CodeCamping TS</h2>
     <!--
     <nav>
       <ul>
@@ -23,7 +23,12 @@
     </nav>
     -->
   </header> 
-  <section>
+
+  <div id="fecha">
+    <p>Damos inicio este sábado 23 de abril</p>
+  </div>
+
+  <section>  
     <h2>Básicos de Programación</h2>
     <p>
       <a href="https://youtu.be/kjp3QOoIeBs" target="_blank">Sesión 1</a>
