Diseño de fecha y secciones

--- a/index.html
+++ b/index.html
@@ -27,65 +27,71 @@
     <div class="linea-ts" id="dos"></div>
     <h1 id="talento-sistemas">Talento <br> Sistemas</h1>
     <h2 id="codecamping-TS">CodeCamping TS</h2>
-    <!--
-    <nav>
-      <ul>
-        <li><a href="index.html">Bootcamp</a></li>
-        <li><a href="about.html">Nosotros</a></li>
-      </ul>
-    </nav>
-    -->
   </header> 
 
   <div id="fecha">
     <p>Inicio: sábado 23 de abril</p>
   </div>
 
-  <section>  
-    <h2>Básicos de Programación</h2>
-    <p>
-      <a href="https://youtu.be/kjp3QOoIeBs" target="_blank">Sesión 1</a>
-      <br>
-      <br>
-      <a href="https://www.youtube.com/watch?v=-RDoAZiOTvo" target="_blank">Sesión 2</a>
-    </p>  
+<!--- Llenando la mochila -->
+  <section class="mochila">
+    <h2 class="subtitulos">Herramientas</h2>
+    <div>  
+      <h2>Construyendo buenas bases de programación</h2>
+      <p>
+        <a class="sesiones" href="https://youtu.be/kjp3QOoIeBs" target="_blank">Sesión 1</a>
+        <a class="sesiones" href="https://www.youtube.com/watch?v=-RDoAZiOTvo" target="_blank">Sesión 2</a>
+      </p>  
+    </div>
+    <br>
+    <div>
+      <h2>Git y Github - Controla tus versiones</h2>
+      <p></p>  
+    </div>
   </section>
   <br>
-  <section>
-    <h2>Git y Github</h2>
-    <p></p>  
+ 
+<!--- Python -->  
+  <section class="python">
+    <h2 class="subtitulos">Python</h2>
+    <div>
+      <h2>Introducción</h2>
+      <p></p>  
+    </div>
+    <br>
+    <div>
+      <h2>Programación Orientada a Objetos</h2>
+      <p></p>  
+    </div>
+    <br>
+    <div>
+      <h2>Avanzado: Graficación con Tkinter</h2>
+      <p></p>  
+    </div>
   </section>
   <br>
-  <section>
-    <h2>Introducción a Python</h2>
-    <p></p>  
-  </section>
+
+<!--- Java -->  
+  <section class="java">
+    <h2 class="subtitulos">Java</h2>
+    <div>
+      <h2>Introducción</h2>
+      <p></p>  
+    </div>
+    <br>
+    <div>
+      <h2>Programación Orientada a Objetos</h2>
+      <p></p>  
+    </div>
+    <br>
+    <div>
+      <h2>Avanzado: Interfaces gráficas</h2>
+      <p></p>  
+    </div>
+  </section> 
   <br>
-  <section>
-    <h2>POO en Python</h2>
-    <p></p>  
-  </section>
-  <br>
-  <section>
-    <h2>Python Avanzado</h2>
-    <p></p>  
-  </section>
-  <br>
-  <section>
-    <h2>Introducción a Java</h2>
-    <p></p>  
-  </section>
-  <br>
-  <section>
-    <h2>POO en Java</h2>
-    <p></p>  
-  </section>
-  <br>
-  <section>
-    <h2>Java Avanzado</h2>
-    <p></p>  
-  </section>
-  <br>
+
+<!--- FOOTER -->  
   <footer>
     <nav id="redes">
       <div id="aprendizaje">Aprendizaje y grupos de Estudio en:</div>
