--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <p>Inicio: sábado 23 de abril</p>
   </div>
 
-<!--- Llenando la mochila -->
-  <section class="mochila">
+<!--- Herramientas -->
+  <section class="herramientas">
     <h2 class="subtitulos">Herramientas</h2>
     <div>  
       <h2>Construyendo buenas bases de programación</h2>
@@ -100,7 +100,7 @@
         <li class="icon">
           <a href="https://www.youtube.com/channel/UCU3Hh50_26pCDKI15DV25Og" target="_blank"> 
             <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="#f00" stroke-width="4" fill="none" ></circle>
+                <circle cx="40" cy="40" r=30 stroke="#f00" stroke-width="4" fill="none" ></circle>
             </svg>
             <i class='bx bxl-youtube'></i>
           </a>
@@ -109,7 +109,7 @@
         <li class="icon">
           <a href="https://t.me/+vAYuSMCmoVMyMzI5" target="_blank"> 
             <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="#1d98dc" 
+                <circle cx="40" cy="40" r=30 stroke="#1d98dc" 
                 stroke-width="4" fill="none" ></circle>
                 <!-- stroke: grosor del círculo -->
             </svg>
@@ -120,7 +120,7 @@
         <li class="icon">
           <a href="https://discord.gg/GC6nA7PBhq" target="_blank"> 
             <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="#5865F2" stroke-width="4" fill="none" ></circle>
+                <circle cx="40" cy="40" r=30 stroke="#5865F2" stroke-width="4" fill="none" ></circle>
             </svg>
             <i class='bx bxl-discord-alt' ></i> 
           </a>
@@ -129,7 +129,7 @@
         <li class="icon">
           <a href="https://github.com/TalentoSistemas" target="_blank"> 
             <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="#0d1117" stroke-width="4" fill="none" ></circle>
+                <circle cx="40" cy="40" r=30 stroke="#0d1117" stroke-width="4" fill="none" ></circle>
             </svg>
             <i class='bx bxl-github' ></i>
           </a>
@@ -138,7 +138,7 @@
         <li class="icon">
           <a href="https://www.facebook.com/groups/talentosistemas" target="_blank"> 
             <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=35 stroke="#3578E5" 
+                <circle cx="40" cy="40" r=30 stroke="#3578E5" 
                 stroke-width="4" fill="none" ></circle>
             </svg>
             <i class='bx bxl-facebook'></i>
