--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </nav>
     <hr>
     <div id="copyright">
-      <small>© 2022 Talento Sistemas │ Todos los derechos reservados</small>
+      <small>© 2022 Talento Sistemas</small>
     </div>
   </footer>
 </body>
