--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 
 <body>
   <header>
-    <div class="linea-ts" id="uno"></div>
-    <div class="linea-ts" id="dos"></div>
+    <div id="arriba"></div>
+    <div class="linea-ts sombra" id="uno"></div>
+    <div class="linea-ts sombra" id="dos"></div>
     <h1 id="talento-sistemas">Talento <br> Sistemas</h1>
-    <h2 id="codecamping-TS">CodeCamping TS</h2>
+    <h2 id="codecamping-TS" class="sombra">CodeCamping TS</h2>
   </header> 
 
   <div id="fecha">
@@ -35,8 +36,8 @@
 
 <!--- Herramientas -->
   <section class="herramientas">
-    <h2 class="subtitulos">Herramientas</h2>
-    <div>  
+    <h2 class="subtitulos sombra">Herramientas</h2>
+    <div class="sombra">  
       <h2>Construyendo buenas bases de programación</h2>
       <p>
         <a class="sesiones" href="https://youtu.be/kjp3QOoIeBs" target="_blank">Sesión 1</a>
@@ -44,7 +45,7 @@
       </p>  
     </div>
     <br>
-    <div>
+    <div class="sombra">
       <h2>Git y Github - Controla tus versiones</h2>
       <p></p>  
     </div>
@@ -53,18 +54,18 @@
  
 <!--- Python -->  
   <section class="python">
-    <h2 class="subtitulos">Python</h2>
-    <div>
+    <h2 class="subtitulos sombra">Python</h2>
+    <div class="sombra">
       <h2>Introducción</h2>
       <p></p>  
     </div>
     <br>
-    <div>
+    <div class="sombra">
       <h2>Programación Orientada a Objetos</h2>
       <p></p>  
     </div>
     <br>
-    <div>
+    <div class="sombra">
       <h2>Avanzado: Graficación con Tkinter</h2>
       <p></p>  
     </div>
@@ -73,18 +74,18 @@
 
 <!--- Java -->  
   <section class="java">
-    <h2 class="subtitulos">Java</h2>
-    <div>
+    <h2 class="subtitulos sombra">Java</h2>
+    <div class="sombra">
       <h2>Introducción</h2>
       <p></p>  
     </div>
     <br>
-    <div>
+    <div class="sombra">
       <h2>Programación Orientada a Objetos</h2>
       <p></p>  
     </div>
     <br>
-    <div>
+    <div class="sombra">
       <h2>Avanzado: Interfaces gráficas</h2>
       <p></p>  
     </div>
