Varios cambios, pasa a ser TH DEVS Recursos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Talento Sistemas</title>
+  <title>TH DEVS | Recursos</title>
 
   <!-- Fuente -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,14 +24,14 @@
 <body>
   <header>
     <div id="arriba"></div>
-    <div class="linea-ts sombra" id="uno"></div>
-    <div class="linea-ts sombra" id="dos"></div>
-    <h1 id="talento-sistemas">Talento <br> Sistemas</h1>
-    <h2 id="codecamping-TS" class="sombra">CodeCamping TS</h2>
+    <div class="linea-vertical sombra" id="uno"></div>
+    <div class="linea-vertical sombra" id="dos"></div>
+    <h1 id="talento-sistemas">TH DEVS</h1>
+    <h2 class="recursos-tech sombra">Recursos Tech</h2>
   </header> 
 
-  <div id="fecha">
-    <p>Inicio: sábado 23 de abril</p>
+  <div class="descripcion">
+    <p>Recursos gratuitos generados por el grupo de estudio TH</p>
   </div>
 
 <!--- Herramientas -->
@@ -40,8 +40,8 @@
     <div class="sombra">  
       <h2>Construyendo buenas bases de programación</h2>
       <p>
-        <a class="sesiones" href="https://youtu.be/kjp3QOoIeBs" target="_blank">Sesión 1</a>
-        <a class="sesiones" href="https://www.youtube.com/watch?v=-RDoAZiOTvo" target="_blank">Sesión 2</a>
+        <a class="sesiones" href="#" target="_blank">Recurso 1</a>
+        <a class="sesiones" href="#" target="_blank">Recurso 2</a>
       </p>  
     </div>
     <br>
@@ -97,16 +97,6 @@
     <nav id="redes">
       <div id="aprendizaje">Aprendizaje y grupos de Estudio en:</div>
       <ul>
-
-        <li class="icon">
-          <a href="https://www.youtube.com/channel/UCU3Hh50_26pCDKI15DV25Og" target="_blank"> 
-            <svg heigth="80" width="80">
-                <circle cx="40" cy="40" r=30 stroke="#f00" stroke-width="4" fill="none" ></circle>
-            </svg>
-            <i class='bx bxl-youtube'></i>
-          </a>
-        </li>
-
         <li class="icon">
           <a href="https://t.me/+vAYuSMCmoVMyMzI5" target="_blank"> 
             <svg heigth="80" width="80">
@@ -149,7 +139,7 @@
     </nav>
     <hr>
     <div id="copyright">
-      <small>© 2022 Talento Sistemas</small>
+      <small>© 2023 TH DEVS</small>
     </div>
   </footer>
 </body>
