--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="sombra">  
       <h2>Construyendo buenas bases de programación</h2>
       <p>
-        <a class="sesiones" href="#" target="_blank">Recurso 1</a>
-        <a class="sesiones" href="#" target="_blank">Recurso 2</a>
+        <a class="sesiones" href="#">Recurso 1</a>
+        <a class="sesiones" href="#">Recurso 2</a>
       </p>  
     </div>
     <br>
@@ -97,8 +97,10 @@
     <nav id="redes">
       <div id="aprendizaje">Aprendizaje y grupos de Estudio en:</div>
       <ul>
+
+        <!-- Telegram -->
         <li class="icon">
-          <a href="https://t.me/+vAYuSMCmoVMyMzI5" target="_blank"> 
+          <a href="https://t.me/+_fUk-DiXLGhlYjlh" target="_blank"> 
             <svg heigth="80" width="80">
                 <circle cx="40" cy="40" r=30 stroke="#1d98dc" 
                 stroke-width="4" fill="none" ></circle>
@@ -108,6 +110,7 @@
           </a>
         </li>
 
+        <!-- Discord -->
         <li class="icon">
           <a href="https://discord.gg/GC6nA7PBhq" target="_blank"> 
             <svg heigth="80" width="80">
@@ -117,8 +120,9 @@
           </a>
         </li>
 
+        <!-- GitHub -->
         <li class="icon">
-          <a href="https://github.com/TalentoSistemas" target="_blank"> 
+          <a href="https://github.com/tek-team" target="_blank"> 
             <svg heigth="80" width="80">
                 <circle cx="40" cy="40" r=30 stroke="#0d1117" stroke-width="4" fill="none" ></circle>
             </svg>
@@ -126,8 +130,9 @@
           </a>
         </li>
 
+        <!-- Facebook -->
         <li class="icon">
-          <a href="https://www.facebook.com/groups/talentosistemas" target="_blank"> 
+          <a href="https://www.facebook.com/groups/thdevs" target="_blank"> 
             <svg heigth="80" width="80">
                 <circle cx="40" cy="40" r=30 stroke="#3578E5" 
                 stroke-width="4" fill="none" ></circle>
